k8s/services/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: webstaurator
spec:
  selector:
    app: user-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
